<resources >

    <string name="app_name">DrinKnight</string>
    <string name="name_hint">krf</string>
    <string name="name">用户名</string>
    <string name="volume_dose_hint">3000</string>
    <string name="volume_dose">饮水总量(mL) </string>
    <string name="last_dose_hint">250</string>
    <string name="last_dose">上一次饮水量(mL) </string>
    <string name="last_time_hint">10:00</string>
    <string name="last_time">上一次饮水时间 </string>
    <string name="suggested_volume_dose_hint">5000</string>
    <string name="suggested_volume_dose">推荐饮水总量(mL) </string>
    <string name="suggested_next_time_hint">10:30</string>
    <string name="suggested_next_time">推荐下一次饮水时间 </string>
    <string name="title_activity_login">Sign in</string>
    <string name="hello_world" translatable="false">你好</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
