<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layouts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_page.MainActivity"
    android:background="@drawable/water"
    >
    <com.kwong.drinknight.home_page.MySinkingView
        android:id="@+id/sinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/charming2" />
    </com.kwong.drinknight.home_page.MySinkingView>
    <RelativeLayout
        style="@style/RelativeLayoutStyle">
        <TextView
            android:text="@string/name"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatasName" />
        <TextView
            android:id="@+id/user_name"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatas" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/RelativeLayoutStyle">
        <TextView
            android:text="@string/volume_dose"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatasName" />
        <TextView
            android:id="@+id/volume_dose"
            android:textSize="16dp"
            android:textColor="#050505"
            style="@style/drinkDatas" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/RelativeLayoutStyle">
        <TextView
            android:text="@string/last_dose"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatasName" />
        <TextView
            android:id="@+id/last_dose"
            android:textSize="16dp"
            android:textColor="#050505"
            style="@style/drinkDatas" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/RelativeLayoutStyle">
        <TextView
            android:text="@string/last_time"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatasName" />
        <TextView

            android:id="@+id/last_time"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatas" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/RelativeLayoutStyle">
        <TextView
            android:text="@string/suggested_volume_dose"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatasName" />
        <TextView
            android:id="@+id/suggested_volume_dose"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatas" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/RelativeLayoutStyle">
        <TextView
            android:text="@string/suggested_next_time"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatasName" />
        <TextView

            android:id="@+id/suggested_next_time"
            android:textColor="#050505"
            android:textSize="16dp"
            style="@style/drinkDatas" />
    </RelativeLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/today_data_bt"
            android:text="当日数据"
            android:layout_marginRight="15dp"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/rank_list_bt"
            android:text="排行榜"
            android:layout_marginRight="15dp"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/user_data_bt"
            android:text="个人资料"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
